# openml-python

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  Documentation.txt  IMPLEMENTATION_PLAN.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  OpenMLDemo.ipynb  PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  README.md  TEST_RUN_DETAILS.md  api.html  appveyor.yml  circle.yml  developing.html  df1.csv  df2.csv  df_feather.pkl  ets.functions import _topic_delete_dataset  genindex.html  index.html  list.pkl  list_second.pkl  make.bat  mkdocs.yml  mock_issue.md  mypy.ini  objects.inv  openml_run_example.py  patch.diff  progress.html  py-modindex.html  pyproject.toml  pytest.ini  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: dist.yaml  docs.yaml  greeting.yml  greetings.yml  labeler.yml  lint.yml  pre-commit.yaml  python-app.yml  release.yml  release_docker.yaml  stale.yml  test.yml  ubuntu-test.yml
GA2-doc/: api.html  contributing.html  genindex.html  progress.html  searchindex.js  usage.html
GA2-doc/_sources/: index.rst.txt
GA2-doc/_static/: documentation_options.js
GA2-doc/examples/: index.html
_downloads/: create_upload_tutorial.ipynb  datasets_tutorial.ipynb  flows_and_runs_tutorial.ipynb  introduction_tutorial.ipynb  openml_run_example.ipynb  tasks_tutorial.ipynb
_sources/: api.txt  index.txt  progress.txt  usage.txt
_sources/examples/: create_upload_tutorial.rst.txt  datasets_tutorial.rst.txt  flows_and_runs_tutorial.rst.txt  introduction_tutorial.rst.txt  tasks_tutorial.rst.txt
ci_scripts/: create_doc.sh  flake8_diff.sh  install.sh  success.sh  test.sh
circle_drop/: .buildinfo  api.html  contributing.html  genindex.html  index.html  objects.inv  progress.html  search.html  searchindex.js  usage.html
circle_drop/_downloads/: create_upload_tutorial.ipynb  create_upload_tutorial.py  datasets_tutorial.ipynb  flows_and_runs_tutorial.ipynb  introduction_tutorial.ipynb  openml_run_example.ipynb  tasks_tutorial.ipynb
circle_drop/_sources/: contributing.rst.txt  index.rst.txt
circle_drop/examples/: create_upload_tutorial.html  datasets_tutorial.html  flows_and_runs_tutorial.html  index.html  introduction_tutorial.html  tasks_tutorial.html
dev/: api.html  contributing.html  developing.html  genindex.html  index.html  objects.inv  progress.html  search.html  searchindex.js  usage.html
dev/_sources/: api.rst.txt  index.txt  progress.rst.txt  usage.rst.txt
dev/_static/: bootstrap-sphinx.css  documentation_options.js
develop/: .buildinfo  api.html  contributing.html  extensions.html  genindex.html  index.html  objects.inv  progress.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  usage.html
develop/_sources/: contributing.rst.txt  index.rst.txt  progress.rst.txt  sg_execution_times.rst.txt  usage.rst.txt
develop/_static/: documentation_options.js
develop/examples/: create_upload_tutorial.html  datasets_tutorial.html  fetch_evaluations_tutorial.html  flows_and_runs_tutorial.html  index.html  introduction_tutorial.html  run_setup_tutorial.html  sg_execution_times.html  tasks_tutorial.html
doc/: Makefile  README.md  api.rst  conf.py  contributing.rst  developing.rst  extensions.rst  index.rst  progress.rst  test_server_usage_warning.txt  usage.rst
doc/_templates/: class.rst
doc/examples/: create_upload_tutorial.ipynb  create_upload_tutorial.py.md5  create_upload_tutorial.rst  datasets_tutorial.ipynb  datasets_tutorial.py  datasets_tutorial.rst  flows_and_runs_tutorial.ipynb  flows_and_runs_tutorial.rst  index.rst  introduction_tutorial.ipynb  introduction_tutorial.py  introduction_tutorial.py.md5  introduction_tutorial.rst  run_setup_tutorial.ipynb  run_setup_tutorial.py.md5  run_setup_tutorial.rst  sg_execution_times.rst  tasks_tutorial.ipynb  tasks_tutorial.py  tasks_tutorial.py.md5  tasks_tutorial.rst
docker/: Dockerfile  docker-compose.test.yml  readme.md  startup.sh  test-server.sh  update.sh
docs/: api.md  contributing.md  details.md  developer_setup.md  extensions.md  index.md  local_test_server.md  progress.md  usage.md
docs/examples/: index.md
examples/: Dataset_import.ipynb  Dataset_import.py  EEG Example.ipynb  OpenMLDemo.ipynb  OpenMLRun.ipynb  OpenML_Cheat_Sheet.ipynb  OpenML_Tutorial.ipynb  OpenML_Tutorial.py  PyOpenML.ipynb  README.txt  config  create_upload_tutorial.html  create_upload_tutorial.py  dataset_tutorial.py  datasets_tutorial.html  datasets_tutorial.py  fetch_evaluations.py  fetch_evaluations_tutorial.py  flows_and_runs_tutorial.html  flows_and_runs_tutorial.py  introduction.py  introduction_tutorial.html  introduction_tutorial.py  openml_tutorial.py  run_setup_tutorial.py  tasks_tutorial.html  tasks_tutorial.py  test_server_usage_warning.txt
examples/10_showcase/: README.txt
examples/20_basic/: README.txt  (+10 more)
main/: .buildinfo  api.html  contributing.html  extensions.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
master/: .buildinfo  api.html  contributing.html  genindex.html  index.html  objects.inv  progress.html  search.html  searchindex.js  usage.html
notebooks/: fix_edit_dataset_metadata_demo.ipynb
openml/: __init__.py  __version__.py  _api_calls.py  _backport.py  _config.py  _get.py  apiconnector.py  autorun.py  base.py  cli.py  config.py  dispatchers.py  enums.py  exceptions.py  publish.py  publishing.py  run_openml.py  testing.py  util.py  utils.py
openml-python/: circle.yml
scripts/: __init__.py  gen_ref_pages.py  profile_tests.sh
source/: api.rst  conf.py  index.rst  progress.rst  usage.rst
stable/: api.html  developing.html  genindex.html  index.html  objects.inv  progress.html  search.html  searchindex.js  usage.html
tests/: __init__.py  config.py  conftest.py  pytest_openml_server.py  test_apiconnector.py  test_datasets.py  test_edit_dataset_creator.py  test_flow.py  test_huggingface_integration.py  test_run.py  test_runs.py  test_task.py
v0.15.1/: 404.html  index.html  objects.inv
(+1097 files in other folders)
