[metadata]
description-file = README.md

[nosetests]
# nosetests skips test files with the executable bit by default
# which can silently hide failing tests.
exe = 1
cover-html = 1
cover-html-dir = coverage
cover-package = openml

detailed-errors = 1
with-doctest = 1
doctest-tests = 1
doctest-extension = rst
doctest-fixtures = _fixture
#doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
