[metadata]
description-file = README.md

[tool:pytest]
filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning

[flake8]
exclude =
    # the following file and directory can be removed when the descriptions
    # are shortened
    examples/30_extended/tasks_tutorial.py
    examples/40_paper